[package]
name = "hibp_securitytxt"
authors = ["m0x"]
description = "Checks for the presence of a security.txt under the current list of breach domains for Have I Been Pwned."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["json"]}
serde = {version = "1.0.174", features = ["derive"]}
tokio = {version = "1.29.1", features = ["full"] }
